--- a/ProdajaSlika/Views/Picture/Details.cshtml
+++ b/ProdajaSlika/Views/Picture/Details.cshtml
@@ -13,7 +13,7 @@
     <div>
         <h3>@Model.Price.ToString("c")</h3>
         <p>Dimenzije: @Model.PictureHeight x @Model.PictureWidth</p>
-        <h4>@Model.Category.Description</h4>
+        <h4>@Model.Description</h4>
 
         <p class="button">
             <a class="btn btn-primary" asp-controller="ShoppingCart" asp-action="AddToShoppingCart" asp-route-picId="@Model.Id">
