--- a/ProdajaSlika/Views/Contact/Index.cshtml
+++ b/ProdajaSlika/Views/Contact/Index.cshtml
@@ -1,2 +1,26 @@
-﻿<h1>Contact us!</h1>
-<email address="prodajaslika2023@email.com" content="Click me!"></email>
+﻿<div style="background-color: cornflowerblue;">
+    <h1 style="border: 2px solid lightblue;">Kontakt informacije</h1>
+</div>
+<div class="container" justify-content-center>
+    <div class="row">
+        <div class="col-md-3">
+                <strong>Adresa:</strong>
+                <p>Bulevar Nikole Tesle 99v, Novi Beograd</p>
+                <strong>Telefon:</strong>
+                <p>+381 (0) 11 313 8784</p>
+                <strong>Mob:</strong>
+                <p>+381 (0) 65 212 48 73</p>
+                <strong>E-mail:</strong>
+                <p>prodajaslika@gmail.com</p>
+                <strong>Radno vreme:</strong>
+                <p>Radnim danima:<br /> 11:00 – 19:00</p>
+        </div>
+        <div class="col-md-9">
+            <div>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2835.480482090822!2d20.41085331489167!3d44.7891818790982!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x475a65f135ad3b37%3A0x4ee84a63b123f22e!2sBulevar%20Nikole%20Tesle%2099%2C%20Beograd!5e0!3m2!1sen!2srs!4v1629404967186!5m2!1sen!2srs" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+
+            </div>
+
+        </div>
+    </div>
+</div>
