--- a/ProdajaSlika/Views/Picture/Details.cshtml
+++ b/ProdajaSlika/Views/Picture/Details.cshtml
@@ -5,7 +5,7 @@
     System.Threading.Thread.CurrentThread.CurrentCulture = culture;
     System.Threading.Thread.CurrentThread.CurrentUICulture = culture;
 }
-<h2>@Model.Name</h2>
+<h2 style="border: 2px solid lightblue;">@Model.Name</h2>
 
 <div>
     <img alt="@Model.Name" src="@Model.ImageUrl" />
@@ -17,7 +17,7 @@
 
         <p class="button">
             <a class="btn btn-primary" asp-controller="ShoppingCart" asp-action="AddToShoppingCart" asp-route-picId="@Model.Id">
-                Add to cart
+                Dodaj u korpu
             </a>
         </p>
     </div>
