--- a/ProdajaSlika/Views/Picture/List.cshtml
+++ b/ProdajaSlika/Views/Picture/List.cshtml
@@ -5,9 +5,16 @@
     System.Threading.Thread.CurrentThread.CurrentCulture = culture;
     System.Threading.Thread.CurrentThread.CurrentUICulture = culture;
 }
+<div style="background-color: cornflowerblue;">
+    <h1 style="border: 2px solid lightblue;">@Model.CurrentCategory</h1>
+    
+</div>
+<div class="gap" style="line-height: 20px; height: 20px;"></div>
+<p>@Model.Category.Description</p>
+<div class="gap" style="line-height: 20px; height: 20px;"></div>
 <div class="row">
     @foreach (var pic in Model.Pictures)
     {
-        <partial name="_PictureCard" model="pic"></partial>
+            <partial name="_PictureCard" model="pic"></partial>
     }
 </div>
