--- a/ProdajaSlika/Views/Shared/_Layout.cshtml
+++ b/ProdajaSlika/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] Prodaja Slika</title>
+    <title>@ViewData["Title"] Slike na platnu</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/ProdajaSlika.styles.css" asp-append-version="true" />
@@ -14,22 +14,24 @@
         <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Prodaja Slika</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
+                    <p class="lead">
+                        <img src="~/images/logo.png" width="200" />
+                    </p>
+                </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Pocetna</a>
-                        </li>
+                    <ul class="navbar-nav flex-grow-1 justify-content-end">
+                        
                         @await Component.InvokeAsync("CategoryMenu")
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Contact" asp-action="Index">Kontakt</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Price" asp-action="Index">Cenovnik</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Contact" asp-action="Index">Kontakt</a>
                         </li>
                         @await Component.InvokeAsync("ShoppingCartSummary")
                     </ul>
@@ -37,22 +39,21 @@
             </div>
         </nav>
     </header>
-    <div class="container">
+    <div class="container" justify-content-center>
         <div class="row">
-            <div class="col-md-3">
-                <p class="lead">
-                    <img src="~/images/3278318_2d730.jpg" width="200" />
-                </p>
+            <div class="col-md-2">
             </div>
-            <div class="col-md-9">
+            <div class="col-md-8">
                 @RenderBody()
+            </div>
+            <div class="col-md-2">
             </div>
         </div>
     </div>
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2023 - ProdajaSlika - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            Slike na platnu &copy; 2023 - <a asp-area="" asp-controller="Contact" asp-action="Index">Kontakt</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
