--- a/ProdajaSlika/Views/ShoppingCart/Index.cshtml
+++ b/ProdajaSlika/Views/ShoppingCart/Index.cshtml
@@ -5,16 +5,18 @@
     System.Threading.Thread.CurrentThread.CurrentCulture = culture;
     System.Threading.Thread.CurrentThread.CurrentUICulture = culture;
 }
-<h2>Your shopping cart</h2>
-<h4>The high quality pictures are in your shopping cart!</h4>
+<div style="background-color: cornflowerblue;">
+    <h2 style="border: 2px solid lightblue;">Izabrane slike</h2>
+</div>
+<h4>Slike izuzetnog kvaliteta su na korak od Vas!</h4>
 
 <table class="table table-bordered table-striped">
     <thead>
         <tr>
-            <th>Selected amount</th>
-            <th>Picture</th>
-            <th class="text-right">Price</th>
-            <th class="text-right">Subtotal</th>
+            <th>Slika</th>
+            <th>Cena</th>
+            <th class="text-right">Količina</th>
+            <th class="text-right">Vrednost</th>
         </tr>
     </thead>
     <tbody>
@@ -30,8 +32,12 @@
     </tbody>
     <tfoot>
         <tr>
-            <td colspan="3" class="text-right">Total</td>
+            <td colspan="3" class="text-right">Ukupno</td>
             <td class="text-right">@Model.TotalPrice.ToString("c")</td>
         </tr>
     </tfoot>
 </table>
+
+<div class="text-center">
+    <a class="btn btn-primary" asp-controller="Order" asp-action="Checkout">Poručite odmah!</a>
+</div>
