--- a/ProdajaSlika/Views/Admin/Delete.cshtml
+++ b/ProdajaSlika/Views/Admin/Delete.cshtml
@@ -1,6 +1,9 @@
 ﻿@model int
 
-<h2>Potvrdite brisanje slike</h2>
+
+<div style="background-color: cornflowerblue;">
+    <h1 style="border: 2px solid lightblue;">Potvrdite brisanje slike</h1>
+</div>
 
 <p>Da li zaista želite da obrišete sliku sa ID-om @Model?</p>
 
