--- a/ProdajaSlika/Views/Admin/Update.cshtml
+++ b/ProdajaSlika/Views/Admin/Update.cshtml
@@ -1,6 +1,8 @@
 ﻿@model Picture
 
-<h2>Izmena slike</h2>
+<div style="background-color: cornflowerblue;">
+    <h1 style="border: 2px solid lightblue;">Izmena slike</h1>
+</div>
 
 <form asp-action="Update" method="post">
     <div class="form-group">
@@ -24,6 +26,7 @@
     <input type="hidden" asp-for="PictureWidth" />
     <input type="hidden" asp-for="CategoryId" />
     <input type="hidden" asp-for="Category" />
+    <div class="gap" style="line-height: 20px; height: 20px;"></div>
     <div class="form-group">
         <button type="submit" class="btn btn-primary">Sačuvaj izmene</button>
     </div>
