--- a/ProdajaSlika/Views/Contact/Index.cshtml
+++ b/ProdajaSlika/Views/Contact/Index.cshtml
@@ -14,6 +14,7 @@
                 <p>prodajaslika@gmail.com</p>
                 <strong>Radno vreme:</strong>
                 <p>Radnim danima:<br /> 11:00 – 19:00</p>
+                <a class="nav-link text-blue" asp-area="" asp-controller="Message" asp-action="Insert">Pošaljite nam poruku ovde.</a>
         </div>
         <div class="col-md-9">
             <div>
@@ -24,4 +25,3 @@
         </div>
     </div>
 </div>
-<a class="nav-link text-dark" asp-area="" asp-controller="Message" asp-action="Insert">Posaljite nam poruku ovde.</a>
