--- a/ProdajaSlika/Views/Shared/_Layout.cshtml
+++ b/ProdajaSlika/Views/Shared/_Layout.cshtml
@@ -54,7 +54,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            Slike na platnu &copy; 2023 - <a asp-area="" asp-controller="Contact" asp-action="Index">Kontakt</a> - <a asp-area="" asp-controller="Admin" asp-action="Index">Admin</a> - <a asp-area="" asp-controller="AppRoles" asp-action="Index">Ovlašćenja</a>
+            Slike na platnu &copy; 2023 - <a asp-area="" asp-controller="Contact" asp-action="Index">Kontakt</a> - <a asp-area="" asp-controller="Admin" asp-action="Index">Admin</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
