--- a/ProdajaSlika/Areas/Identity/Pages/Account/Login.cshtml
+++ b/ProdajaSlika/Areas/Identity/Pages/Account/Login.cshtml
@@ -1,12 +1,8 @@
 ﻿@page
 @model LoginModel
 
-@{
-    ViewData["Title"] = "Uloguj se";
-}
-
 <div style="background-color: cornflowerblue;">
-    <h1 class="display-4" style="border: 2px solid lightblue;">@ViewData["Title"]</h1>
+    <h1 class="display-4" style="border: 2px solid lightblue;">Uloguj se</h1>
 </div>
 
 <div class="row">
