--- a/ProdajaSlika/Areas/Identity/Pages/Account/Register.cshtml
+++ b/ProdajaSlika/Areas/Identity/Pages/Account/Register.cshtml
@@ -1,11 +1,9 @@
 ﻿@page
 @model RegisterModel
-@{
-    ViewData["Title"] = "Registracija";
-}
+
 
 <div style="background-color: cornflowerblue;">
-    <h1 class="display-4" style="border: 2px solid lightblue;">@ViewData["Title"]</h1>
+    <h1 class="display-4" style="border: 2px solid lightblue;">Registracija</h1>
 </div>
 
 <div class="row">
